Update completo, e construção da view de cadastrar produtos. Andamento da view listar produtos. Adicionado notificações com a API TryTester.